Fix crash with webRequest and network service when duplicate request IDs are seen.

The cause in this case was SimpleURLLoader always using a request ID of 0. These requests don't go through auth anyways (since there's no tab to associate them with). Gracefully handle this in WebRequestProxyingURLLoaderFactory by not crashing.

Bug: 853118
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I856259f76caf67d7d6c0b8e48535cd56419ead1a
Reviewed-on: https://chromium-review.googlesource.com/1133692
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574567}
Former-commit-id: b4072ab48cadcd3f98481be63bdd59e5c623729d