extensions/browser/api/web_request/web_request_proxying_url_loader_factory.h
@@ -197,7 +197,7 @@ class WebRequestProxyingURLLoaderFactory
  private:
   void OnTargetFactoryError();
   void OnProxyBindingError();
-  void RemoveRequest(int32_t network_service_request_id);
+  void RemoveRequest(int32_t network_service_request_id, uint64_t request_id);
 
   void* const browser_context_;
   content::ResourceContext* const resource_context_;
